se refactorizan los indices, los buckets y la forma de armar las keys de los mismos + tests